z-index fixed

--- a/week02/styles/temples-large.css
+++ b/week02/styles/temples-large.css
@@ -26,7 +26,6 @@
         left: 0;
         right: 0;
         background-color: black;
-        opacity: 80%;
     
         height: 0; 
         overflow: hidden;
